default/objects/NVMStatsSF__Transaction__c/NVMStatsSF__Transaction__c.object-meta.xml
<CustomObject>
    <description>Transaction logging and tracing for the Stats loads</description>
    <label>Transaction</label>
    <nameField>
        <displayFormat>TX-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>