default/objects/NVMStatsSF__Transaction__c/fields/NVMStatsSF__Bytes_Read__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Bytes_Read__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Bytes Read</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>