default/objects/NVMStatsSF__Transaction__c/fields/NVMStatsSF__Channel__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Channel__c</fullName>
    <label>Channel</label>
    <length>64</length>
    <type>Text</type>
</CustomField>