default/objects/NVMStatsSF__Transaction__c/fields/NVMStatsSF__checked__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__checked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used by workflow to check channel running n hours after this transaction was logged</inlineHelpText>
    <label>Channel Checked</label>
    <type>Checkbox</type>
</CustomField>