default/objects/NVMStatsSF__Transaction__c/fields/NVMStatsSF__Duration__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Duration__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Transaction duration (elapsed time not CPU time)</inlineHelpText>
    <label>Duration(ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>