default/objects/NVMStatsSF__Transaction__c/fields/NVMStatsSF__Failed__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Flags Transactions which encountered a fatal error, such as mis-configuration</inlineHelpText>
    <label>Failed</label>
    <type>Checkbox</type>
</CustomField>