default/objects/NVMStatsSF__Transaction__c/fields/NVMStatsSF__Heap__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Heap__c</fullName>
    <inlineHelpText>Peak observed heap usage</inlineHelpText>
    <label>Heap</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>