default/objects/NVMStatsSF__Transaction__c/fields/NVMStatsSF__Interval__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Interval__c</fullName>
    <inlineHelpText>Interval in seconds spanned by this transaction</inlineHelpText>
    <label>Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>