default/objects/NVMStatsSF__Transaction__c/fields/NVMStatsSF__IsLast__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__IsLast__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked if this is the last inbound call stats transaction log for this channel</inlineHelpText>
    <label>Is Last Inbound</label>
    <type>Checkbox</type>
</CustomField>