default/objects/NVMStatsSF__Transaction__c/fields/NVMStatsSF__Limits__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Limits__c</fullName>
    <label>Limits</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>