default/objects/NVMStatsSF__Transaction__c/fields/NVMStatsSF__Logs2__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Logs2__c</fullName>
    <label>Logs2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>