default/objects/NVMStatsSF__Transaction__c/fields/NVMStatsSF__Logs__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Logs__c</fullName>
    <label>Logs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>