default/objects/NVMStatsSF__Transaction__c/fields/NVMStatsSF__ReQueued_Job__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__ReQueued_Job__c</fullName>
    <inlineHelpText>Id of any job re-queued when this transaction was checked</inlineHelpText>
    <label>ReQueued Job</label>
    <length>18</length>
    <type>Text</type>
</CustomField>