default/objects/NVMStatsSF__Transaction__c/fields/NVMStatsSF__Rows_Processed__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Rows_Processed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Rows Processed</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>