default/objects/NVMStatsSF__Transaction__c/fields/NVMStatsSF__Size__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Size__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Size</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>