default/objects/NVMStatsSF__Transaction__c/fields/NVMStatsSF__Summaries_Saved__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Summaries_Saved__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Summaries Saved</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>