default/objects/NVMStatsSF__Transaction__c/fields/NVMStatsSF__Time__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Time__c</fullName>
    <label>Time</label>
    <type>DateTime</type>
</CustomField>