default/objects/NVMStatsSF__Transaction__c/fields/NVMStatsSF__Timezone__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Timezone__c</fullName>
    <inlineHelpText>Timezone the transaction ran in and in which a subsequent one will run</inlineHelpText>
    <label>Timezone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>