default/objects/NVMStatsSF__Transaction__c/fields/NVMStatsSF__Transaction_Group__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Transaction_Group__c</fullName>
    <formula>IF(FLOOR ( MOD( CreatedDate - ($System.OriginDateTime),1) *24) &lt; 10,&#39;0&#39;,&#39;&#39;) &amp;
TEXT(FLOOR ( MOD( CreatedDate - ($System.OriginDateTime),1) *24)) &amp; &#39; &#39; &amp;  NVMStatsSF__Type__c</formula>
    <label>Transaction Group</label>
    <type>Text</type>
</CustomField>