default/objects/NVMStatsSF__Transaction__c/fields/NVMStatsSF__Type__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Type__c</fullName>
    <label>Type</label>
    <length>64</length>
    <type>Text</type>
</CustomField>