default/objects/NVMStatsSF__Transaction__c/fields/NVMStatsSF__Window_End__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Window_End__c</fullName>
    <inlineHelpText>End of the transaction window.  Its start is this time minus the Interval</inlineHelpText>
    <label>Window End</label>
    <type>DateTime</type>
</CustomField>